--- a/public/index.html
+++ b/public/index.html
@@ -45,11 +45,11 @@
             <option>payment</option>
           </select>
           <br><br>
-          <input class="payment" type="text">
+          <input id="to_from" class="payment" type="text">
           <br><br>
-          <input class="payment" type="text">
+          <input id="details" class="payment" type="text">
           <br><br>
-          <input class="payment" type="text">
+          <input id="amount" class="payment" type="text">
         </div>
       </div>
       <br>
@@ -59,11 +59,10 @@
       </div>
     </form>
   </div>
-  <script src="sandbox.js"></script>
-
 </body>
 <footer>
   <p class="footer">This site was made by AriGute to learn TypeScript</p>
 </footer>
-<script src="sandbox.js"></script>
+<script type="module" src="app.js"></script>
+
 </html>
