--- a/public/index.html
+++ b/public/index.html
@@ -13,12 +13,13 @@
   <div class="center" id="ass">
     <h1>Payment-methods.com</h1>
   </div>
+  <div class="container" style="background-color: white; width: 100%;">
+
 
   <div class="left">
     <h2>
       Payment setup:
     </h2>
-
     <form>
       <div class="container">
         <div>
@@ -58,6 +59,11 @@
 
       </div>
     </form>
+  </div>
+  <div class="right" style="text-align: center;">
+    <!-- <p style="color: black;">test</p> -->
+    <lu id="paylist"></lu>
+  </div>
   </div>
 </body>
 <footer>
